tests/paczka1/small_fuzzy/53248749.err
Error in line 6: eyBwN75 A993 54,2
Error in line 9: 4tSVBOrx5O S829 62,5
